--- a/src/JessenSoft.AxentFlow.UI/JessenSoft.AxentFlow.UI.csproj
+++ b/src/JessenSoft.AxentFlow.UI/JessenSoft.AxentFlow.UI.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ReactiveUI" Version="20.2.45" />
+    <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
+  </ItemGroup>
+
 </Project>
