Add application interfaces for workflow service and executor

--- a/src/JessenSoft.AxentFlow.Application/JessenSoft.AxentFlow.Application.csproj
+++ b/src/JessenSoft.AxentFlow.Application/JessenSoft.AxentFlow.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JessenSoft.AxentFlow.Core\JessenSoft.AxentFlow.Core.csproj" />
+  </ItemGroup>
+
 </Project>
