Add SQLite integration with AxentFlowDbContext and implement WorkflowService

--- a/src/JessenSoft.AxentFlow.Web/JessenSoft.AxentFlow.Web.csproj
+++ b/src/JessenSoft.AxentFlow.Web/JessenSoft.AxentFlow.Web.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\JessenSoft.AxentFlow.Infrastructure\JessenSoft.AxentFlow.Infrastructure.csproj" />
     <ProjectReference Include="..\JessenSoft.AxentFlow.UI\JessenSoft.AxentFlow.UI.csproj" />
   </ItemGroup>
 
