--- a/src/JessenSoft.AxentFlow.Infrastructure/JessenSoft.AxentFlow.Infrastructure.csproj
+++ b/src/JessenSoft.AxentFlow.Infrastructure/JessenSoft.AxentFlow.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\JessenSoft.AxentFlow.Application\JessenSoft.AxentFlow.Application.csproj" />
+    <ProjectReference Include="..\JessenSoft.AxentFlow.Core\JessenSoft.AxentFlow.Core.csproj" />
+  </ItemGroup>
+
 </Project>
