--- a/src/JessenSoft.AxentFlow.Web/JessenSoft.AxentFlow.Web.csproj
+++ b/src/JessenSoft.AxentFlow.Web/JessenSoft.AxentFlow.Web.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="DevExpress.Xpo" Version="22.1.6" />
     <PackageReference Include="DynamicData" Version="9.2.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="MudBlazor" Version="8.5.1" />
     <PackageReference Include="ReactiveUI.Blazor" Version="20.2.45" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
